Fixing View More button z-index and scroll on bringing up search filters.

--- a/src/components/ArtObjectGrid/artObjectGrid.scss
+++ b/src/components/ArtObjectGrid/artObjectGrid.scss
@@ -143,7 +143,6 @@
   .view-more-button {
     width: 100%;
     text-align: center;
-    z-index: 1;
     margin-top: 80px;
     
     @include breakpoint('medium+') {
